--- a/dsen2-cr/UnpackDataset/unpack_dataset.ipynb
+++ b/dsen2-cr/UnpackDataset/unpack_dataset.ipynb
@@ -14,8 +14,7 @@
    "outputs": [],
    "source": [
     "#This is the folder that the data will be distracted to. It should be the same folder set as input_data_folder in the DSen2CR code.\n",
-    "input_data_folder = '/home/cody/input_data_folder'\n",
-    "!mkdir -p {input_data_folder}"
+    "input_data_folder = '/home/cody/input_data_folder'"
    ]
   },
   {
@@ -175,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget --no-check-certificate -O ROIs2017_winter_s2_cloudy.tar \"https://dataserv.ub.tum.de/s/m1554803/download?path=%2F&files=ROIs2017_winter_s2_cloudy.tar.gz\" "
+    "!wget --no-check-certificate -O ROIs2017_winter_s2_cloudy.tar.gz \"https://dataserv.ub.tum.de/s/m1554803/download?path=%2F&files=ROIs2017_winter_s2_cloudy.tar.gz\" "
    ]
   },
   {
@@ -184,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget --no-check-certificate -O ROIs2017_winter_s2.tar \"https://dataserv.ub.tum.de/s/m1554803/download?path=%2F&files=ROIs2017_winter_s2.tar\" "
+    "!wget --no-check-certificate -O ROIs2017_winter_s2.tar.gz \"https://dataserv.ub.tum.de/s/m1554803/download?path=%2F&files=ROIs2017_winter_s2.tar\" "
    ]
   },
   {
