--- a/dsen2-cr/UnpackDataset/unpack_dataset.ipynb
+++ b/dsen2-cr/UnpackDataset/unpack_dataset.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "#This is the folder that the data will be distracted to. It should be the same folder set as input_data_folder in the DSen2CR code.\n",
-    "input_data_folder = '/home/cody/input_data_folder'"
+    "input_data_folder = '/home/jovyan/input_data_folder'"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget --no-check-certificate -O ROIs2017_winter_s2.tar.gz https://dataserv.ub.tum.de/s/m1554803/download?path=%2F&files=ROIs2017_winter_s2.tar.gz"
+    "!wget --no-check-certificate -O ROIs2017_winter_s2.tar.gz \"https://dataserv.ub.tum.de/s/m1554803/download?path=%2F&files=ROIs2017_winter_s2.tar.gz\""
    ]
   },
   {
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!tar -xzf ROIs2017_winter_s2_cloudy.tar"
+    "!tar -xzf ROIs2017_winter_s2_cloudy.tar.gz"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!tar -xzf ROIs2017_winter_s2.tar"
+    "!tar -xzf ROIs2017_winter_s2.tar.gz"
    ]
   },
   {
@@ -290,7 +290,6 @@
    "source": [
     "import os\n",
     "import shutil\n",
-    "x = 0\n",
     "\n",
     "s1_data = [\"ROIs1158_spring_s1\", \"ROIs1868_summer_s1\", \"ROIs1970_fall_s1\", \"ROIs2017_winter_s1\"]\n",
     "\n",
